<resources>
    <string name="app_name" translatable="false">Kolo</string>

    <!-- H -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- H Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_account">Account</string>
    <string name="nav_operation">Operations</string>
    <string name="nav_history">History</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About us</string>

    <!-- H Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Account</item>
        <item>Operations</item>
        <item>History</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <!-- H -->
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>


    <string name="nav_header_title" translatable="false">Kolo</string>
    <string name="nav_header_subtitle" translatable="false">kolo@cyberix.fr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="msg">Please enable all permissions</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome">welcome</string>
    <string name="logo">logo</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">First name</string>
    <string name="phone">Phone</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="DOB">Date of birth</string>
    <string name="RegisNewsAcc">Register New Account</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="scheduled_date">Schedule Date</string>
    <string name="scheduled">scheduled</string>
    <string name="immediate">immediately</string>
    <string name="choose_recipient">Choose Recipient</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_passphrase_opt">Enter passphrase(Optional)</string>
    <string name="cancel">Cancel</string>
    <string name="Ok">ok</string>
    <string name="first_last_names">First and Last names</string>
    <string name="enter_confimation_code">Enter confirmation code</string>
    <string name="confirm">Confirm</string>
    <string name="already_member">Already a member? Login</string>
    <string name="kolo_retrieve">Kolo Retrieve</string>
    <string name="kolo_retrieve_desc">Retrieve money from your Kolo account</string>
    <string name="kolo_transfer">Kolo Transfer</string>
    <string name="kolo_transfer_desc">Do a Kolo to a friend or family</string>
    <string name="kolo_payement">Kolo Payement</string>
    <string name="kolo_payement_desc">Replenish your Kolo account</string>


    <!-- Strings related to Settings -->


    <string name="setting">Settings</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="airtime_providers_prompt">Chose à Provider</string>
    +
    +
    <string-array name="airtime_providers_list">
        +
        <item>ORANGE</item>
        +
        <item>MTN</item>
        +
        <item>NEXTTEL</item>
        +
        <item>CAMTEL</item>
        +
        <item>YOOMEE</item>
        +
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="your_name">Your Name</string>
    <string name="your_name_def_val">CoderzHeaven</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="app_version">5.0</string>
    <string name="title_version">Version</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_name">key_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="title_activity_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_notif_rowimg">Notification list item image</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="notifications">Notifications</string>
    <string name="creation_date">Creation Date</string>
    <string name="operation_type">Operation type</string>
    <string name="history_date">History date</string>
    <string name="amount">Amount</string>
    <string name="xaf">XAF</string>
    <string name="sampleamount">8192</string>
    <string name="oldbalance">Old balance</string>
    <string name="newbalance">New balance</string>
    <string name="kolo_send">Kolo send</string>
    <string name="kolo_recieved">Kolo received</string>
    <string name="my_bills">My bills</string>
    <string name="sampleemail">KoloApp@cyberix.fr</string>
    <string name="samplephone">+237 671010101</string>
    <string name="mynotif">My notifications</string>
    <string name="showmyqrcode">Show my QR Code</string>
    <string name="username">Username</string>
    <string name="phonenum">Phone number</string>
    <string name="welcomeback">Welcome back,</string>
    <string name="accountbalance">Account balance</string>
    <string name="profil">Profil</string>
    <string name="include_passphrase">Include passphrase</string>
    <string name="needConfirmation">Need Confirmation</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="enter_something">Enter Something</string>
    <string name="dummy_status">Status</string>
    <string name="title_activity_top_up" translatable="false">TopUpActivity</string>
    <string name="provider_promt">Operator</string>
    <string name="buy_airtime">Buy Airtime</string>
    <string name="provider_prompt">Provider</string>
    <string name="eneo_logo">Eneo logo</string>
    <string name="eneo_contract_number">Contract number</string>
    <string name="eneo_bill_number">Bill number</string>
    <string name="pay_eneo_bill">Pay someone\'s bill</string>
    <string name="eneo_pub">Eneo pub</string>
    <string name="default_status_code">SENT</string>
    <string name="default_amount">15 000</string>
    <string name="default_operation_date">01 june 18</string>
    <string name="default_operation_id">10235</string>
    <string name="prompt_phone">Telephone</string>
    <string name="full_name">Fullname</string>
    <string name="contact_image">Contact image</string>
    <string name="eneo_image">Eneo detail row image</string>
    <string name="kolo_eneo">Kolo Eneo</string>
    <string name="kolo_eneo_desc">Kolo your Eneo bill easily</string>
    <string name="kolo_top_up">Kolo TopUp</string>
    <string name="kolo_top_up_desc">Kolo some AirTime credit</string>
    <string name="kolo_visa">Kolo Visa</string>
    <string name="kolo_visa_scann_desc">Kolo a visa card easily</string>
    <string name="kolo_mad">Kolo Mad</string>
    <string name="kolo_mad_desc">Kolo a Mad to your grandma or your grandpa</string>
    <string name="kolo_card_form">Kolo Card</string>
    <string name="kolo_card_form_desc">Save your Kolo credit card information for easy payment</string>
    <string name="label_buy_now">Buy now</string>
    <string name="label_scan_now">Scan credit card</string>
    <string name="pay_my_own_bill">Pay my bill</string>
    <string name="kolo_logo_desc">Kolo Logo</string>
    <string name="find">Find</string>
    <string name="drawer_open">Choose an action</string>
    <string name="drawer_close">Welcome to KOLO</string>
    <string name="title_activity_kolo_home">KoloHomeActivity</string>
    <string name="balance">Balance : 15.000 XAF</string>
    <string name="total_balance">Balance</string>
    <string name="available_balance">Available</string>
    <string name="unavailable_balance">Pending</string>
    <string name="names">Names</string>
    <string name="samplenames">Marcus Brown</string>


    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

</resources>
