<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <android.support.v7.widget.CardView
        app:cardElevation="5dp"
        app:cardCornerRadius="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="10dp"
            android:background="@drawable/roundedrectangle"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="128dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_announcement_black_36dp"/>

                <TextView
                    android:paddingLeft="5dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/notifications"
                    android:textSize="16sp"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/txt_notif_creationdate"
                    android:text=""
                    android:hint="@string/creation_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/lightgrayline"
                android:layout_margin="5dp"/>

            <TextView
                android:paddingBottom="5dp"
                android:id="@+id/txt_notif_title"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_notif_message"
                android:text="@string/message"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>