<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_announcement_black_36dp"
                    android:tint="@color/colorPrimary"/>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/notifications"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/txt_notif_creationdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/creation_date"
                    android:text=""/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="5dp"
                android:background="@color/lightgrayline"/>

            <TextView
                android:id="@+id/txt_notif_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_notif_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textSize="16sp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>