<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/lightgrayline"
    android:layout_height="match_parent"
    tools:context=".activities.KoloUserProfilActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="350dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical"
                android:background="@color/colorPrimary">

                <ImageView
                    android:id="@+id/img_usrprof_profpic"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_account_circle_black_64dp" />

                <TextView
                    android:id="@+id/txt_usrprof_firstname"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstname"/>

                <TextView
                    android:id="@+id/txt_usrprof_lastname"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lastname"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true">


                <android.support.v7.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="#fff">

                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kolo_send"
                            android:textStyle="bold"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/txt_usrprof_kolosend"
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sampleamount"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/colorPrimaryDark"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="#fff">

                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kolo_recieved"
                            android:textStyle="bold"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/txt_usrprof_kolorecieved"
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sampleamount"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/colorPrimaryDark"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="#fff">

                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_bills"
                            android:textStyle="bold"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/txt_usrprof_mybills"
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sampleamount"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/colorPrimaryDark"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_email_black_24dp"/>

                <TextView
                    android:id="@+id/txt_usrprof_email"
                    android:paddingLeft="5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sampleemail"
                    android:textSize="16sp"/>

            </LinearLayout>


            <LinearLayout
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_phone_android_black_24dp"/>

                <TextView
                    android:id="@+id/txt_usrprof_phone"
                    android:paddingLeft="5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/samplephone"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_notifications_black_24dp"/>

                <TextView
                    android:id="@+id/txt_usrprof_notif"
                    android:paddingLeft="5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mynotif"
                    android:textSize="16sp"/>

            </LinearLayout>


        </LinearLayout>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_usrprof_showqrcode"
            android:layout_width="162dp"
            android:layout_height="42dp"
            android:text="@string/showmyqrcode" />

    </LinearLayout>

</ScrollView>