<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/history_op_type"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:text="@string/operation_type"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/history_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/history_date"
                    android:text=""/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="5dp"
                android:background="@color/lightgrayline"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:text="@string/amount"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/history_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@string/sampleamount"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/xaf"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/lightgrayline"/>

                <LinearLayout
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:text="@string/oldbalance"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/history_old_balance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@string/sampleamount"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/xaf"
                            android:textSize="16sp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/lightgrayline"/>

                <LinearLayout
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:text="@string/newbalance"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/history_new_balance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@string/sampleamount"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/xaf"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>